kubernetes/apps/xen-orchestra/xen.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: xen-orchestra
    namespace: xen-orchestra
    labels:
        app: xen-orchestra
spec:
    replicas: 1
    selector:
        matchLabels:
            app: xen-orchestra
    template:
        metadata:
            labels:
                app: xen-orchestra
        spec:
            containers:
                - name: xen-orchestra
                  image: ronivay/xen-orchestra:5.109.0
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: xen-orchestra
                        mountPath: /var/lib/xo-server
                        subPath: xo-server
                      - name: xen-orchestra
                        mountPath: /var/lib/redis
                        subPath: redis
                      #- name: xen-orchestra
                      #  mountPath: /etc/xo-server
                      #  subPath: xo-server
            volumes:
                - name: xen-orchestra
                  persistentVolumeClaim:
                      claimName: xen-orchestra
---
apiVersion: v1
kind: Service
metadata:
    name: xen-orchestra
    namespace: xen-orchestra
spec:
    selector:
        app: xen-orchestra
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: xen-orchestra
    namespace: xen-orchestra
    annotations:
        cert-manager.io/cluster-issuer: my-clusterissuer
spec:
    tls:
        - hosts:
              - xoce.heaven.ist
          secretName: my-xoce-tls  # pragma: allowlist secret
    rules:
        - host: xoce.heaven.ist
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: xen-orchestra
                            port:
                                number: 80
